shopfloor_mobile: fix floating menu width
Avoid overlap with whole window. Was a requirement at the beginning. Not needed and buggy today.

--- a/shopfloor_mobile/static/wms/src/css/main.css
+++ b/shopfloor_mobile/static/wms/src/css/main.css
@@ -14,9 +14,6 @@ main.v-content > .v-content__wrap > .header .container {
     border-bottom: 5px dashed orange !important;
 }
 
-#app nav.v-navigation-drawer.v-navigation-drawer--open {
-    width: 100% !important;
-}
 #app nav.v-navigation-drawer .v-list {
     padding: 0;
 }
